# redocs

./: Cargo.toml  LICENSE  README.md  manual.html  pyproject.toml  python_api.ipynb  python_api.py  testrep.html
src/: lib.rs
