[package]
name = "redocs"
description = "Generate HTML reports from Rust or Python"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "redocs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
build_html="2.4.0"
